kitsune/sumo/static/sumo/less/includes/search-result.less
.result {
  margin: 40px 0;
  padding-left: 80px;
  position: relative;

  &:before {
    background: url('../img/search-icons-sprite.png') 0 0 no-repeat;
    content: '';
    height: 56px;
    left: 0;
    position: absolute;
    top: 0;
    width: 56px;
  }

  &:first-of-type {
    margin-top: 0;
  }

  &:last-of-type {
    margin-bottom: 0;
  }

  a,
  a:hover {
    color: @textGrey;
  }

  a:visited {
    color: @textPurple;
  }

  h3 {
    margin: 0 0 4px 0;
  }

  &.document {
    &:before {
      background-position: -46px -46px;
    }
  }

  &.question {
    &:before {
      background-position: -46px -194px;
    }
  }

  .question-status {
    font-size: 13px;
    margin: 12px 0 0 0;

    .solved {
      background: transparent @iconsSprite no-repeat scroll -49px -862px;
      color: rgb(129, 188, 46);
      display: inline-block;
      font-family: "Open Sans Light",Arial,Helvetica,sans-serif;
      line-height: 18px;
      text-indent: 22px;
    }
  }

  .thread-meta {
    list-style: none;
    margin: 3px 0 0 0;
    padding: 0;

    li {
      border-left: 1px solid @borderLightGrey;
      float: left;
      font-size: 13px;
      margin-left: 10px;
      padding-left: 10px;

      &:first-of-type {
        border: 0;
        margin: 0;
        padding: 0;
      }
    }
  }
}

